welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:5: error: type mismatch;
 found   : Int(1)
 required: String
      test=test+1
                ^