welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {  
  var test=false
  for (l <- 0 to 3){
    if (nums(l)==9){
      test=test+1
  }
  }
  return test
}